@@ -1,3 +1,6 @@
+11/21/2017
+- add explicit endpoint authentication method "bearer_access_token"
+
 11/16/2017
 - add support for passing userinfo as a JSON object or JWT; see #311
 - release 2.3.3
